<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_detail_info_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_view_detail_info_drawablePadding"
                android:text="@string/text_view_author_label_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_view_detail_info_marginStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_detail_info_marginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_view_detail_info_drawablePadding"
                android:text="@string/text_view_status_label_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_view_detail_info_marginStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_detail_info_marginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_view_detail_info_drawablePadding"
                android:text="Thể loại:"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_view_detail_info_marginStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_view_detail_info_textSize" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_detail_info_marginTop"
            android:drawablePadding="@dimen/text_view_detail_info_drawablePadding"
            android:text="@string/text_view_description_label_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_detail_info_textSize"
            app:drawableStartCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_view_detail_info_tvDescription_marginTop"
            android:lineSpacingExtra="@dimen/text_view_detail_info_tvDescription_lineSpacingExtra"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_detail_info_textSize" />
    </LinearLayout>

</ScrollView>